finished all of take bracelet and dont drink milk storyline. Fixed some save issues

--- a/public/index.html
+++ b/public/index.html
@@ -66,11 +66,11 @@ h1 { color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 62px; font-we
 
 h2 { color: #ffffff; font-family: 'Raleway',sans-serif; font-size: 30px; font-weight: 800; line-height: 36px; margin: 0 0 24px; text-align: center; }
 
-p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 18px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
+p { color: #f8f8f8; font-family: 'Raleway',sans-serif; font-size: 19px; font-weight: 500; line-height: 32px; margin: 0 0 24px; }
 
-p {margin: 10px;}
+p {margin: 9px;}
 
-a { color: #c8c8c8; text-decoration: underline; }
+a { color: #0011ff; text-decoration: underline; }
 
 
 a:hover { color: #1c1c1c; text-decoration: underline; }
