added skip tutorial and fixed minor issues

--- a/public/index.html
+++ b/public/index.html
@@ -80,13 +80,21 @@ a:hover { color: #1c1c1c; text-decoration: underline; }
     border: solid;
 }
 
-button{
-    margin: 12px;
+button { 
+  margin: 12px;
+  width: 300px;
+}
+
+video{
+  width: "98vw";
+  height: 500px; 
+  object-fit: "cover";
 }
 
 body{
   background-color: hsl(0, 14%, 10%);
 }
+
 
 
 </style>
