Cloned and built new with lower size videos

--- a/public/index.html
+++ b/public/index.html
@@ -87,12 +87,18 @@ button {
 
 video{
   width: "98vw";
-  height: 500px; 
+  height: 490px; 
   object-fit: "cover";
+  display: block;
+  margin: auto;
 }
 
 body{
   background-color: hsl(0, 14%, 10%);
+}
+
+img{
+  margin: auto;
 }
 
 
